fix: The great wall of china causing the time to get cut off

--- a/src/main/resources/css/profile_page.css
+++ b/src/main/resources/css/profile_page.css
@@ -33,6 +33,10 @@
   -fx-text-fill: -fx-lightgray-100;
 }
 
+.round-entry > HBox {
+  -fx-min-width: 60px;
+}
+
 .eye-icon {
   -fx-min-width: 18px;
   -fx-max-height: 14px;
